Draft: Added a snap button to turn arch dimensions off

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -52,6 +52,7 @@
         <file>icons/Snap_Extension.svg</file>
         <file>icons/Snap_Ortho.svg</file>
         <file>icons/Snap_Near.svg</file>
+        <file>icons/Snap_Dimensions.svg</file>
         <file>icons/Draft_Clone.svg</file>
         <file>icons/Draft_Heal.svg</file>
         <file>icons/Draft_Ellipse.svg</file>
