--- a/src/Mod/Part/Gui/DlgSettingsGeneral.ui
+++ b/src/Mod/Part/Gui/DlgSettingsGeneral.ui
@@ -75,6 +75,19 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
+       <widget class="Gui::PrefCheckBox" name="checkBooleanCheck">
+        <property name="text">
+         <string>Automatically check model after boolean operation</string>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>CheckModel</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/Part/Boolean</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
        <widget class="Gui::PrefCheckBox" name="checkBooleanRefine">
         <property name="text">
          <string>Automatically refine model after boolean operation</string>
@@ -87,16 +100,16 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="Gui::PrefCheckBox" name="checkBooleanCheck">
+      <item row="2" column="0">
+       <widget class="Gui::PrefCheckBox" name="checkSketchBaseRefine">
         <property name="text">
-         <string>Automatically check model after boolean operation</string>
+         <string>Automatically refine model after sketch-based operation</string>
         </property>
         <property name="prefEntry" stdset="0">
-         <cstring>CheckModel</cstring>
+         <cstring>RefineModel</cstring>
         </property>
         <property name="prefPath" stdset="0">
-         <cstring>Mod/Part/Boolean</cstring>
+         <cstring>Mod/PartDesign</cstring>
         </property>
        </widget>
       </item>
