--- a/src/WindowsInstaller/FreeCADData.wxs
+++ b/src/WindowsInstaller/FreeCADData.wxs
@@ -68,6 +68,15 @@
 						</Component>
 					</Directory>
 				</Directory>
+				<!-- Raytracing resource files  -->
+				<Directory Id="DataModRay" Name="Raytracing" FileSource="../../data/Mod/Raytracing" >
+					<Directory Id="ModRaytracingTemplates" Name="Templates" FileSource="../../data/Mod/Raytracing/Templates">
+						<Component Id="CompModRaytracingTemplates" Guid="C0319A8E-7B29-428a-84B7-4A84DB44ABD3" Win64='$(var.Win_64)' KeyPath="yes">
+							<File Id="ProjectStd" Name="ProjectStd.pov"  />
+							<File Id="RadiosityNormal" Name="RadiosityNormal.pov"  />
+						</Component>
+					</Directory>
+				</Directory>
 				<!-- StartPage resource files  -->
 				<Directory Id="DataModStart" Name="Start" FileSource="../../data/Mod/Start" >
 					<Directory Id="ModStartDataStartPage" Name="StartPage" FileSource="../../data/Mod/Start/StartPage" >
