--- a/src/Mod/Raytracing/Gui/Resources/Raytracing.qrc
+++ b/src/Mod/Raytracing/Gui/Resources/Raytracing.qrc
@@ -8,6 +8,7 @@
         <file>icons/Raytrace_ExportProject.svg</file>
         <file>icons/Raytrace_NewPartSegment.svg</file>
         <file>icons/Raytrace_Render.svg</file>
+        <file>icons/Raytrace_Lux.svg</file>
         <file>translations/Raytracing_af.qm</file>
         <file>translations/Raytracing_de.qm</file>
         <file>translations/Raytracing_fi.qm</file>
