--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -57,6 +57,7 @@
         <file>icons/Draft_Heal.svg</file>
         <file>icons/Draft_Ellipse.svg</file>
         <file>icons/Draft_ShapeString.svg</file>
+        <file>icons/Draft_Facebinder.svg</file>
         <file>patterns/concrete.svg</file>
         <file>patterns/cross.svg</file>
         <file>patterns/line.svg</file>
